tests/rosetta/out/Fortran/arithmetic-numbers.error
gfortran: exit status 1
/tmp/arithmetic-numbers.f90:104:15:

  104 |       out = (s(i+1:(i + 1)) + out)
      |               1
Error: Expected a right parenthesis in expression at (1)
/tmp/arithmetic-numbers.f90:203:10:

  203 |       last = arr((((x - 1))+1))
      |          1
Error: Symbol ‘last’ at (1) has no IMPLICIT type
/tmp/arithmetic-numbers.f90:182:9:

  182 |     limit = 1228663
      |         1
Error: Symbol ‘limit’ at (1) has no IMPLICIT type
/tmp/arithmetic-numbers.f90:139:5:

  139 |     n = 3
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/arithmetic-numbers.f90:135:56:

  135 |   recursive integer function arithmeticNumbers(limit,spf) result(res)
      |                                                        1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘spf’ at (1)
/tmp/arithmetic-numbers.f90:114:46:

  114 |   recursive integer function primeCount(primes,last,spf) result(res)
      |                                              1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘primes’ at (1)
/tmp/arithmetic-numbers.f90:114:55:

  114 |   recursive integer function primeCount(primes,last,spf) result(res)
      |                                                       1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘spf’ at (1)
/tmp/arithmetic-numbers.f90:68:43:

   68 |   recursive integer function primesFrom(spf,limit) result(res)
      |                                           1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘spf’ at (1)
/tmp/arithmetic-numbers.f90:185:36:

  185 |     arr = arithmeticNumbers(1000000,spf)
      |                                    1
Error: Rank mismatch in argument ‘spf’ at (1) (scalar and rank-1)
/tmp/arithmetic-numbers.f90:178:4:

  178 |     res = arr
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arithmetic-numbers.f90:89:8:

   89 |     s = s2
      |        1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/arithmetic-numbers.f90:91:10:

   91 |       s = ' ' // s
      |          1
Error: Operands of string concatenation operator at (1) are CHARACTER(1)/INTEGER(4)
/tmp/arithmetic-numbers.f90:90:20:

   90 |     do while ((size(s) < 3))
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arithmetic-numbers.f90:93:10:

   93 |     res = s
      |          1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/tmp/arithmetic-numbers.f90:192:16:

  192 |         line = (line + pad3(arr((((i + j))+1))))
      |                1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/arithmetic-numbers.f90:99:8:

   99 |     s = s3
      |        1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/arithmetic-numbers.f90:101:14:

  101 |     i = (size(s) - 1)
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arithmetic-numbers.f90:106:33:

  106 |       if ((((mod(c,3) == 0) .and. i) > 0)) then
      |                                 1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/arithmetic-numbers.f90:205:14:

  205 |       print *, trim(trim(''//char(10)//'The ' // commatize(x)) // 'th arithmetic number is: ') // lastc
      |              1
Error: Operands of string concatenation operator at (1) are CHARACTER(*)/INTEGER(4)
/tmp/arithmetic-numbers.f90:208:30:

  208 |       print *, trim(trim(trim('The count of such numbers <= ' // lastc) // ' which are composite is ') // commatize(comp)) // '.'
      |                              1
Error: Operands of string concatenation operator at (1) are CHARACTER(29)/INTEGER(4)
/tmp/arithmetic-numbers.f90:119:14:

  119 |     hi = size(primes)
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arithmetic-numbers.f90:83:4:

   83 |     res = primes
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arithmetic-numbers.f90:65:4:

   65 |     res = spf
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
